WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159650
Fix indentation in FrameLoaderTypes.h
https://bugs.webkit.org/show_bug.cgi?id=159650
Summary
Fix indentation in FrameLoaderTypes.h
Andy Estes
Reported
2016-07-11 15:48:17 PDT
Fix indentation in FrameLoaderTypes.h
Attachments
Patch
(4.77 KB, patch)
2016-07-11 15:49 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(4.77 KB, patch)
2016-07-11 15:55 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2016-07-11 15:49:46 PDT
Created
attachment 283356
[details]
Patch
WebKit Commit Bot
Comment 2
2016-07-11 15:51:02 PDT
Attachment 283356
[details]
did not pass style-queue: ERROR: Source/WebCore/loader/FrameLoaderTypes.h:105: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andy Estes
Comment 3
2016-07-11 15:55:02 PDT
Created
attachment 283358
[details]
Patch
WebKit Commit Bot
Comment 4
2016-07-11 16:26:24 PDT
Comment on
attachment 283358
[details]
Patch Clearing flags on attachment: 283358 Committed
r203093
: <
http://trac.webkit.org/changeset/203093
>
WebKit Commit Bot
Comment 5
2016-07-11 16:26:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug