Fix indentation in FrameLoaderTypes.h https://bugs.webkit.org/show_bug.cgi?id=159650

Reviewed by Brady Eidson.

* loader/FrameLoaderTypes.h:


Canonical link: https://commits.webkit.org/177799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203093 268f45cc-cd09-0410-ab3c-d52691b4dbfc